--- a/R/05_analysis_pca.qmd
+++ b/R/05_analysis_pca.qmd
@@ -3,6 +3,7 @@
 ```{r 01_libraries_and_options}
 library(tidyr)
 library(graphics)
+library(broom)
 
 # Set the bitmap type to 'cairo' to avoid PNG issue
 options(bitmapType = 'cairo')
@@ -25,7 +26,7 @@ summary(pc)
 ```{r 03_pca_plot}
 #Plots the principal component values (pc$x)  
 
-pc$x |> as.data.frame() |>
+pca_plot <- pc$x |> as.data.frame() |>
   ggplot(aes(x = PC1, y = PC2, color = colourby)) +
   geom_point(size = 2.5) +
   labs(title = 'Principal component analysis', 
@@ -33,10 +34,11 @@ pc$x |> as.data.frame() |>
        color = 'Cell Type') +
   theme_classic() +
   theme(legend.position = 'right')
+  
 ```
 
 ```{r 04_pc_variance_plot}
-pc |>
+pc_varianceplot <- pc |>
   tidy(matrix = "eigenvalues") |>
   filter(PC <= 5) |>
   ggplot(aes(PC, percent)) +
@@ -46,11 +48,14 @@ pc |>
     labels = scales::percent_format(),
     expand = expansion(mult = c(0, 0.01))
   ) +
-  theme_classic()
+  theme_classic() +
+  ylab('Porportion of Variance (%)')
 ```
 
 ## Save plot
 
 ```{r 05_save_plots}
-ggsave(plot = biplot, filename = "PCA_on_proteingroups_original.png", width = 20, height = 10, units = "cm", path = here("results"))
+ggsave(plot = pca_plot, filename = "PCA_on_proteingroups_original.png", width = 15, height = 10, units = "cm", path = here("results"))
+
+ggsave(plot = pc_varianceplot, filename = "pca_variance_barplot.png", width = 15, height = 10, units = "cm", path = here("results"))
 ```
