Oban tidy style

--- a/R/05_analysis_pca.qmd
+++ b/R/05_analysis_pca.qmd
@@ -26,7 +26,7 @@ summary(pc)
 ```{r 03_pca_plot}
 #Plots the principal component values (pc$x)  
 
-pca_plot <- pc$x |> as.data.frame() |>
+pca_plot <- predict(pc) |> as.data.frame() |> 
   ggplot(aes(x = PC1, y = PC2, color = colourby)) +
   geom_point(size = 2.5) +
   labs(title = 'Principal component analysis', 
