--- a/R/04_describe.qmd
+++ b/R/04_describe.qmd
@@ -9,8 +9,9 @@ editor: visual
 ```{r 04_library, message=FALSE, running=FALSE}
 library(tidyverse)
 library(ggplot2)
-library(UpSetR)
+#library(UpSetR)
 library(here)
+source(here("R/99_functions.R"))
 
 ```
 
