--- a/R/06_analysis_volcano.qmd
+++ b/R/06_analysis_volcano.qmd
@@ -13,6 +13,9 @@ library("ggthemes")
 library("ggrepel")
 library("ggplot2")
 library("patchwork")
+library(graphics)
+source(here("R/99_functions.R"))
+
 ```
 
 ## Load data
